--- a/styles/components/select.scss
+++ b/styles/components/select.scss
@@ -9,9 +9,9 @@
   }
 
   .selected > input {
-    &:extend(.sub-title1);
+    @extend .sub-title1;
     position: absolute;
-    color: @primary-emphasis;
+    color: $primary-emphasis;
     padding: 3px 7px;
     border: 0;
     text-align: start;
@@ -33,15 +33,15 @@
   }
 
   .selected > input:focus{
-    color: @primary-helper;
+    color: $primary-helper;
   }
   .selected > input:focus + .selectIcon {
     transform: translateY(50%) rotate(180deg);
   }
 
   .options {
-    &:extend(.txt-body2);
-    background-color: @bg-navbar;
+    @extend .txt-body2;
+    background-color: $bg-navbar;
     border-radius: 9px;
     animation: openOptions .5s;
     overflow: hidden;
@@ -49,7 +49,7 @@
     right: 0;
     left: 0;
     top: calc(100% + 6px);
-    box-shadow: @elavation5;
+    box-shadow: $elavation5;
     cursor: pointer;
     z-index: 1;
 
@@ -58,7 +58,7 @@
       padding: 7.5px 7px ;
 
       span {
-        color: @primary-helper;
+        color: $primary-helper;
         position: relative;
       }
 
@@ -70,14 +70,14 @@
       }
 
       &:hover::before {
-        background-color: @dynamic-hover;
+        background-color: $dynamic-hover;
       }
       &:first-child{
         padding-top: 8.5px;
       }
       &:last-child {
         padding-bottom: 8.5px;
-      } 
+      }
     }
 
     &.closeAnimation {
