--- a/styles/global/fonts.scss
+++ b/styles/global/fonts.scss
@@ -1,4 +1,4 @@
-@import (css) url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 @font-face {
   font-family: 'NoirPro';
