--- a/styles/global/custom.scss
+++ b/styles/global/custom.scss
@@ -2,3 +2,10 @@
   background-color: transparent !important;
   box-shadow: 0 0 0 0 !important;
 }
+
+.hide-scrollbar {
+  @media  screen and (min-width: 768px) {
+    overflow: hidden;
+    width: calc(100% - 12px);
+  }
+}
