--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -3,12 +3,12 @@
   width: 0;
   inset: 50% auto auto 50% !important;
   transform: translate(-50%, -50%);
-  animation: pressState .4s ease;
+  animation: pressState 0.4s ease;
   border-radius: 50px;
 }
 
 // developing
-[class^="btn-"] {
+[class^='btn-'] {
   position: relative;
   overflow: hidden;
   border-radius: 16px;
@@ -30,10 +30,14 @@
     padding: 10px;
     border-radius: 50%;
 
-    svg { margin: 0; }
+    svg {
+      margin: 0;
+    }
   }
 
-  svg { margin-right: 8px; }
+  svg {
+    margin-right: 8px;
+  }
 
   span {
     @extend .txt-button;
@@ -51,11 +55,12 @@
 
   &.onpressed::before {
     @extend .commonPress;
-    background-color: $dynamic-press !important;
+    background-color: var(--dynamic-press) !important;
   }
 }
 
-.btn-primary, .btn-gradient {
+.btn-primary,
+.btn-gradient {
   color: rgba(#fff, 87);
   fill: rgba(#fff, 87);
 
@@ -73,12 +78,13 @@
   background-color: $primary-variant;
 }
 
-.btn-transparent, .btn-secondary {
+.btn-transparent,
+.btn-secondary {
   color: var(--text-emphasis);
   fill: var(--text-emphasis);
 
   &:hover::before {
-    background-color: $dynamic-hover;
+    background-color: var(--dynamic-hover);
   }
 }
 
@@ -88,16 +94,16 @@
 
 .btn-secondary {
   background-color: $secondary;
-
 }
 
 .btn-gradient {
-  background-image: linear-gradient(to left,
-    $primary-variant 0% 20% ,
+  background-image: linear-gradient(
+    to left,
+    $primary-variant 0% 20%,
     $primary 40% 50%,
-    $primary-variant 70% 100%);
-  box-shadow:
-    0px 4px 17px rgba($primary-variant, 0.8),
+    $primary-variant 70% 100%
+  );
+  box-shadow: 0px 4px 17px rgba($primary-variant, 0.8),
     0px -4px 17px rgba($primary-variant, 0.5);
   background-size: 300% 100%;
   background-position-x: 100%;
