deposit: partial Finish

--- a/styles/componets.scss
+++ b/styles/componets.scss
@@ -1,3 +1,6 @@
 @import '@components/Button';
 @import '@components/DropDown';
 @import '@components/Modal';
+@import '@components/Badge';
+
+@import './pages.scss';
